blog/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    cert-manager.io/cluster-issuer: selfsigned
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: blog-certs
      hosts:
        - &host blog.local
  rules:
    - host: *host
      http:
        paths:
          - path: /
            backend:
              serviceName: blog
              servicePort: http
